# RichLogger

./: .gitignore  LICENSE  README.md  pyproject.toml
rich_logger/: __init__.py  console_logger_highlighter.py  defaults.py  rich_logger.py  utils.py
tests/: test_configuration.ini  test_rich_logger.py
