[tool.poetry]
name = "rich_logger"
version = "0.1.0"
description = "A simple Logger for Python which includes rich formatting for console prints."
authors = ["Elias Brohammer"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "rich_logger", from = "." },
]


[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.9.4"

[tool.poetry.dev-dependencies]
coverage = "^7.6"
black = "^24.10"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
